--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "static boilerplate 2.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulps": "gulp watch && gulp webserver"
   },
   "author": "athelas",
   "license": "ISC",
