--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
     "gulp-fontmin": "^0.7.4",
     "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "^1.2.0",
@@ -22,5 +23,6 @@
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
     "gulp-webserver": "^0.9.1"
-  }
+  },
+  "dependencies": {}
 }
